@@ -5,12 +5,12 @@ Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
 Uploaders: Thomas Goirand <zigo@debian.org>
 Build-Depends: debhelper (>= 9),
                dh-python,
-               openstack-pkg-tools (>= 40~),
+               openstack-pkg-tools (>= 50~),
                python-all,
                python-pbr (>= 1.8),
                python-setuptools,
                python-sphinx,
-Build-Depends-Indep: alembic (>= 0.8.0),
+Build-Depends-Indep: alembic (>= 0.8.4),
                      python-coverage,
                      python-eventlet (>= 0.18.4),
                      python-fixtures (>= 1.3.1),
@@ -19,15 +19,15 @@ Build-Depends-Indep: alembic (>= 0.8.0),
                      python-mock (>= 1.3),
                      python-mysqldb,
                      python-neutron (>= 2:8.0.0),
-                     python-neutron-lib,
+                     python-neutron-lib (>= 0.1.0),
                      python-netaddr (>= 0.7.12),
-                     python-oslo.concurrency (>= 2.3.0),
-                     python-oslo.config (>= 1:3.7.0),
+                     python-oslo.concurrency (>= 3.8.0),
+                     python-oslo.config (>= 1:3.9.0),
                      python-oslo.db (>= 4.1.0),
                      python-oslo.log (>= 1.14.0),
-                     python-oslo.messaging (>= 4.0.0),
+                     python-oslo.messaging (>= 4.5.0),
                      python-oslo.serialization (>= 1.10.0),
-                     python-oslo.service (>= 1.0.0),
+                     python-oslo.service (>= 1.10.0),
                      python-oslo.utils (>= 3.5.0),
                      python-oslosphinx (>= 2.5.0),
                      python-oslotest (>= 1.10.0),
@@ -49,19 +49,19 @@ Vcs-Git: https://anonscm.debian.org/git/openstack/neutron-fwaas.git
 Package: python-neutron-fwaas
 Architecture: all
 Section: python
-Depends: alembic (>= 0.8.0),
+Depends: alembic (>= 0.8.4),
          python-pbr (>= 1.8),
          python-eventlet (>= 0.18.4),
          python-httplib2,
          python-mysqldb,
          python-neutron (>= 2:8.0.0),
-         python-neutron-lib,
+         python-neutron-lib (>= 0.1.0),
          python-netaddr (>= 0.7.12),
-         python-oslo.config (>= 1:3.7.0),
+         python-oslo.config (>= 1:3.9.0),
          python-oslo.db (>= 4.1.0),
          python-oslo.log (>= 1.14.0),
-         python-oslo.messaging (>= 4.0.0),
-         python-oslo.service (>= 1.0.0),
+         python-oslo.messaging (>= 4.5.0),
+         python-oslo.service (>= 1.10.0),
          python-oslo.serialization (>= 1.10.0),
          python-oslo.utils (>= 3.5.0),
          python-psycopg2 (>= 2.5),
