@@ -1,6 +1,6 @@
 [DEFAULT]
 upstream-branch = master
-debian-branch = debian/mitaka
+debian-branch = debian/newton
 upstream-tag = %(version)s
 compression = xz
 
