@@ -1,6 +1,7 @@
 neutron-fwaas (1:9.0.0~b1-1) experimental; urgency=medium
 
   * New upstream release.
+  * Fixed (build-)depends for this release.
 
  -- Thomas Goirand <zigo@debian.org>  Fri, 17 Jun 2016 09:30:07 +0200
 
